--- a/IREC-Hyperion System/platformio.ini
+++ b/IREC-Hyperion System/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = teensy36
+
 [env:teensy36]
 platform = teensy
 board = teensy36
