--- a/IREC-Hyperion Ground Station/System Forwarder/platformio.ini
+++ b/IREC-Hyperion Ground Station/System Forwarder/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
+[env:teensy36]
+platform = teensy
+board = teensy36
 framework = arduino
